# brazilian-data-er

./: @databricks_reset_job.json  README.md  config.json  databricks.yml  pyproject.toml
.github/workflows/: databricks_pipeline.yml
explore-datasets/: bronze_tables.xlsx  silver_tables.xlsx
src/brazilian_data_er/: __init__.py
src/brazilian_data_er/bronze/: __init__.py  customers.py  geolocation.py  order_items.py  order_payments.py  order_reviews.py  orders.py  product_category_translation.py  products.py  sellers.py
src/brazilian_data_er/gold/: __init__.py  customer_ltv.py  daily_sales.py  product_performance.py  review_insights.py  sales_fact.py
src/brazilian_data_er/silver/: __init__.py  customers.py  order_items.py  orders.py  payments.py  products.py  reviews.py  sellers.py
src/brazilian_data_er/utils/: __init__.py  json_parser.py  logger.py  spark_utils.py
